crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__tty_until_offset_beyond.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
[
    FormattedMeeting {
        text: "12:30 - Later Meeting",
        urgency: Upcoming,
        meeting: MeetingView {
            id: "evt-90",
            provider_name: "unknown",
            title: "Later Meeting",
            start_local: 2025-02-05T12:30:00+01:00,
            end_local: 2025-02-05T13:00:00+01:00,
            is_all_day: false,
            is_ongoing: false,
            primary_link: Some(
                EventLink {
                    kind: GoogleMeet,
                    url: "https://meet.google.com/abc-90",
                    meeting_id: None,
                    passcode: None,
                },
            ),
            secondary_links: [],
            calendar_url: Some(
                "https://calendar.google.com/event/90",
            ),
            calendar_id: "primary",
            user_response_status: Unknown,
            other_attendee_count: 0,
            location: None,
            description: None,
            attendees: [],
            reminder_minutes: None,
        },
    },
]
