crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_all_day_only.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 284
expression: output
---
{
  "text": "All day - Company Holiday",
  "tooltip": "All day - Company Holiday",
  "class": "allday"
}
