crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_empty.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
assertion_line: 236
expression: output
---
{
  "text": "No meetings",
  "tooltip": "No upcoming meetings"
}
