crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_ending_soon.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "4 minutes to go - Sprint Review",
  "tooltip": "• 10:34 - Sprint Review",
  "class": "ending_soon"
}
