crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_hide_all_day.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "No meetings",
  "tooltip": "No upcoming meetings"
}
