crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_mixed_meetings.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "In 15 minutes - Team Standup",
  "tooltip": "• All day - Company Holiday\n• 11:15 - Team Standup\n• 12:00 - 1:1 Meeting",
  "class": "upcoming"
}
