crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_ongoing.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "20 minutes to go - Sprint Review",
  "tooltip": "• 10:50 - Sprint Review",
  "class": "ongoing"
}
