crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__waybar_privacy.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
{
  "text": "In 15 minutes - Busy",
  "tooltip": "• 11:15 - Busy",
  "class": "upcoming"
}
